Ticket #11268 (closed defect: fixed)

Opened 4 years ago

Last modified 3 years ago

Fixed margin alignment problem on owner-drawn menu

Reported by: malcompl Owned by:
Priority: normal Milestone:
Component: wxMSW Version:
Keywords: wxMenu, wxOwnerDrawn Cc:
Blocked By: Patch: yes
Blocking:

Description

Fixed margin alignment problem existing after refractored wxOwnerDrawn (#10635).

Attachments

menualign.patch download (12.7 KB) - added by malcompl 4 years ago.

Change History

Changed 4 years ago by vadz

  • status changed from new to infoneeded_new

Sorry, this doesn't apply any longer after I fully applied your patch in #11244. Do you want me to revert that one and apply this one instead or should I commit my tree (to ownerdraw-refactor branch) and let you update this patch?

Thanks!

Changed 4 years ago by malcompl

  • status changed from infoneeded_new to new

Ok, I can update this patch after you commit all changes associated with #11244.

Changed 4 years ago by malcompl

Changed 4 years ago by malcompl

Patch updated ;)

Changed 4 years ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [62213]) Fix calculation of the margins for owner-drawn menu items.

Take into account the widths of the bitmaps properly.

Closes #11268.

Changed 3 years ago by VZ

(In [63222]) Fix calculation of the margins for owner-drawn menu items.

Take into account the widths of the bitmaps properly.

Closes #11268.

Note: See TracTickets for help on using tickets.