Fix calculation of the margins for owner-drawn menu items.

Take into account the widths of the bitmaps properly.

Closes #11268.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/branches/ownerdraw-refactor@62213 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775